--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
             <div class="blog__posts">
 
-                <div class="blog__post" data-aos="slider-left">
+                <div class="blog__post">
                     <div class="blog__post-bg">
                         <a href="" class="blog__photo">
                             <img src="assets/img/blog/blog-v3.jpg" alt="" class="blog__img">
@@ -314,7 +314,7 @@
                     </div>
                 </div>
 
-                <div class="blog__post" data-aos="flip-left">
+                <div class="blog__post">
                     <div class="blog__post-bg">
                         <a href="" class="blog__photo">
                             <img src="assets/img/blog/blog-v2.webp" alt="" class="blog__img">
@@ -331,7 +331,7 @@
                     </div>
                 </div>
 
-                <div class="blog__post" data-aos="flip-left">
+                <div class="blog__post">
 
                     <div class="blog__post-bg">
                         <a href="" class="blog__photo">
